# trsl

./: CMakeLists.txt  Makefile  README  documentation.html
doc/: Doxyfile  accessor.txt  examples.txt  faq.txt  footer.html  header.html  index.txt  notes.txt  products.txt  random.txt  release_procedure.txt  todo.txt  version_history.txt
doc_src/: Doxyfile  accessor.txt  examples.txt  faq.txt  footer.html  header.html  index.txt  notes.txt  products.txt  random.txt  release_procedure.txt  todo.txt  version_history.txt
examples/: Particle.hpp  ParticleCollection.hpp  trsl_example1.cpp  trsl_example1plus.cpp  trsl_example2.cpp
scripts/: generate_stl_container_iterators.py
tests/: accessor_efficiency.cpp  accessor_no_inline.cpp  common.hpp  reorder_iterator_efficiency.cpp  test_boost_typeof.cpp  test_custom_permutation_iterator.cpp  test_custom_reord_iter.cpp  test_is_picked_systematic.cpp  test_perm_syst_sample_iter.cpp  test_random_permutation_iterator.cpp  test_random_reord_iter.cpp  test_sort_iterator.cpp  test_sorted_reord_iter.cpp  test_systematic_sample_iterator.cpp
trsl/: common.hpp  custom_permutation_iterator.hpp  custom_reord_iter.hpp  error_handling.hpp  is_picked_systematic.hpp  perm_syst_sample_iter.hpp  persistent_filter_iterator.hpp  ppfilter_iterator.hpp  ppfilter_iterator_prototype.hpp  prototype_reord_iter.hpp  random_permutation_iterator.hpp  random_reord_iter.hpp  reorder_iterator.hpp  shared_container_iterator.hpp  sort_iterator.hpp  sorted_reord_iter.hpp  stl_container_iterator_factory.hpp  stl_deque.hpp  stl_list.hpp  stl_multiset.hpp  stl_set.hpp  stl_vector.hpp  systematic_sample_iterator.hpp  version.hpp  weight_accessor.hpp
(+1 files in other folders)
